# nix-data

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  test.yml
modules/nixos/nix-data/: default.nix
shells/nix-data/: default.nix
src/: lib.rs  utils.rs
src/cache/: channel.rs  flakes.rs  nixos.rs  nonnixos.rs  profile.rs
