[package]
name = "nix-data-xinux"
version = "0.0.5"
edition = "2024"
license = "MIT"
description = "A set of modules for easily managing Nix and NixOS packages and options"
repository = "https://github.com/xinux-org/nix-data"
readme = "README.md"
include = ["src/*", "Cargo.toml", "LICENSE*", "README.md"]
keywords = ["nix", "nixos", "nix-editor", "xinux"]
authors = [
  "Sokhibjon Orzikulov <sakhib@orzklv.uz>",
  "Victor Fuentes <vlinkz@snowflakeos.org>",
]

[dependencies]
reqwest = { version = "0.13", features = ["blocking", "brotli", "json"] }
anyhow = "1.0"
lazy_static = "1.5"
brotli = "8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ijson = "0.1"

nix-editor = "0.3.0"
log = "0.4"
pretty_env_logger = "0.5"

sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
